--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,600;0,700;1,100&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
+:root{
+  --color-1: #023E8A;
+  --color-2: #0096C7;
+
+  --text-color: #2f2e2e;
+
+  --font-poppins : 'Poppins', sans-serif;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html{
+  scroll-behavior: smooth;
+  background-color: rgba(0,0,255,.1);
+}
+body{
+  font-family: var(--font-poppins);
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
