--- a/src/app/pokemon/home/home.component.html
+++ b/src/app/pokemon/home/home.component.html
@@ -1,10 +1,7 @@
 <main class="main">
-  <div #container__pokemons class="container" 
-  infiniteScroll
-  (scrolled)="onScrollDown()"
-  >
+  <div #container__pokemons class="container" infiniteScroll (scrolled)="onScrollDown()">
     <div class="card" [ngStyle]="{'background-color' : getColorRGBA(poke.species?.color?.name, .6) }"
-      *ngFor="let poke of pokemon$ | async" (click)="modalService.open(poke.pokemon.name)">
+      *ngFor="let poke of pokemons$ | async" (click)="modalService.open(poke.pokemon.name)">
       <span>N.º {{poke.pokemon.id}}</span>
 
       <div class="card__body">
@@ -22,8 +19,12 @@
       <!-- Info a mostrar en la modal -->
       <app-modal id="{{poke.pokemon.name}}">
         <app-card-detail [pokemon]="poke"></app-card-detail>
+        <button (click)="modalService.close();" style="position: absolute;top: 10px;right: 10px; z-index: 100; background-color: transparent; border: none;" 
+        [ngStyle]="{'color' : poke.species?.color?.name }"
+        >
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 20 20"><path fill="currentColor" d="M2.93 17.07A10 10 0 1 1 17.07 2.93A10 10 0 0 1 2.93 17.07zM11.4 10l2.83-2.83l-1.41-1.41L10 8.59L7.17 5.76L5.76 7.17L8.59 10l-2.83 2.83l1.41 1.41L10 11.41l2.83 2.83l1.41-1.41L11.41 10z"/></svg>
+        </button>
       </app-modal>
-      <!-- <button (click)="modalService.close();">Close</button> -->
     </div>
 
     <div #limitPage id="limitPage"></div>
