correcion del spinner

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -26,9 +26,9 @@
         </button>
       </app-modal>
     </div>
-
-    <div #limitPage id="limitPage"></div>
+    <app-spinner></app-spinner>
   </div>
+
 
   <button *ngIf="showButton" class="button-fab" (click)="onScrollTop()">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16">
