--- a/src/app/components/spinner/spinner.component.css
+++ b/src/app/components/spinner/spinner.component.css
@@ -1,15 +1,10 @@
 .overlay{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
+  width: 100%;
   flex-direction: column;
   gap:8px;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0,0,0,0.7);
   z-index: 1000;
 }
 .overlay span{
