--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -2,6 +2,7 @@
   position: fixed;
   inset: 0;
   z-index: 10000;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.75);
   padding: 40px;
   overflow: auto;
@@ -11,8 +12,8 @@
 }
 
 .modal__body {
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  max-width: 1280px;
   border-radius: 10px;
   box-shadow: 1px 1px 8px rgba(255, 255, 0, 0.457);
   overflow: hidden;
@@ -30,7 +31,16 @@ body.jw-modal-open {
   .modal__body {
     box-shadow: none;
     width: 100%;
-    height: 90%;
+  }
+  .modal {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 850px) {
+  .modal__body {
+    box-shadow: none;
+    width: 100%;
   }
   .modal {
     padding: 10px;
