--- a/src/app/page/home/home.component.css
+++ b/src/app/page/home/home.component.css
@@ -1,17 +1,17 @@
-.main{
+.main {
   margin: 2px 8px;
   overflow: hidden;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
-.container{
+.container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap:12px;
+  gap: 12px;
   row-gap: 8px;
   position: relative;
 }
 .card {
-  background-color:#023E8A50 ;
+  background-color: #023e8a50;
   padding: 4px 4px;
   border-radius: 4px;
   cursor: pointer;
@@ -21,30 +21,29 @@
   position: relative;
   justify-content: center;
 }
-.card:hover{
+.card:hover {
   transform: scale(1.01);
-  opacity: .8;
+  opacity: 0.8;
 }
-.card:hover .card__image{
+.card:hover .card__image {
   transform: scale(1.1);
 }
-.card >span{
+.card > span {
   position: absolute;
-  top:4px;
+  top: 4px;
   right: 6px;
   font-size: 12px;
   color: rgb(216, 209, 209);
   font-weight: 600;
 }
 
-
-.card__body{
+.card__body {
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  gap:10px;
+  gap: 10px;
 }
-.card__body h3{
+.card__body h3 {
   color: white;
   font-size: 20px;
   line-height: 18px;
@@ -52,19 +51,19 @@
   text-transform: capitalize;
 }
 
-.card__image{
+.card__image {
 }
-.card__image > img{
+.card__image > img {
   object-fit: contain;
 }
 
-.tag{
+.tag {
   display: flex;
   flex-direction: column;
-  gap:4px;
+  gap: 4px;
 }
 .tag span {
-  background-color: rgb(255, 255, 255, .3);
+  background-color: rgb(255, 255, 255, 0.3);
   padding: 2px 8px;
   border-radius: 20px;
   font-size: 12px;
@@ -72,7 +71,7 @@
   text-align: center;
 }
 
-.button-fab{
+.button-fab {
   font-family: var(--poppins);
   background-color: white;
   border-radius: 100%;
@@ -87,7 +86,20 @@
   /* z-index: ; */
   cursor: pointer;
 }
-.button-fab:hover{
+.button-fab:hover {
   transform: scale(1.2);
   background-color: rgba(216, 216, 216, 0.752);
+}
+.btn-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  background-color: transparent;
+  border: none;
+}
+.btn-close:hover{
+  transform: scale(1.2);
+  cursor: pointer;
+  opacity: .8;
 }
