--- a/src/app/components/spinner/spinner.component.css
+++ b/src/app/components/spinner/spinner.component.css
@@ -24,8 +24,8 @@
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #fff;
-  border-color: #fff transparent #fff transparent;
+  border: 6px solid #1300a3;
+  border-color: #1300a3 transparent #1300a3 transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 @keyframes lds-dual-ring {
